--- a/Paint.html
+++ b/Paint.html
@@ -50,7 +50,7 @@
 			        isMouseDown = true;
 			        var cs = canvasCoords(canvas, e.clientX, e.clientY);
 			        c.beginPath();
-			        c.moveTo(cs.x, coords.y);
+			        c.moveTo(cs.x, cs.y);
 			        c.lineTo(cs.x, cs.y);
 			        c.stroke();
 			    }
